--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,7 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Hello World!</p>
+    <button class="start-btn">click to choose time</button>
+    <div class="box"></div>
     <script src="./script.js"></script>
   </body>
 </html>
